# hoover

./: Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
src/: config.rs  error.rs  lib.rs  models.rs  recording.rs
src/audio/: buffer.rs  capture.rs  mod.rs  resample.rs  vad.rs
src/mcp/: mod.rs  repository.rs
src/net/: client.rs  crypto.rs  firewall.rs  mod.rs  protocol.rs  server.rs
src/output/: markdown.rs
src/speaker/: enroll.rs  identify.rs  mod.rs
src/stt/: mod.rs  openai.rs  vosk.rs  whisper.rs
src/vcs/: git.rs  gitea.rs  github.rs  mod.rs  resolve.rs
