[package]
name = "hoover"
version = "0.0.1"
edition = "2024"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
description = "spy on yourself for good"
license = "AGPL-3.0-or-later"
repository = "https://github.com/erikh/hoover"

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs"]
vosk = ["dep:vosk"]
openai = ["dep:reqwest"]
github = ["dep:octocrab"]
gitea = ["dep:gitea-sdk", "dep:reqwest"]
mcp = ["dep:rmcp", "dep:schemars"]

[[bin]]
name = "hoover"
path = "src/bin/hoover/main.rs"

[dependencies]
# Audio
cpal = "0.17"
hound = "3.5"
rubato = "1.0"
audioadapter-buffers = "2.0"
crossbeam-channel = "0.5"

# STT backends (feature-gated)
whisper-rs = { version = "0.15", optional = true }
vosk = { version = "0.3", optional = true }
reqwest = { version = "0.13", features = ["json", "multipart"], optional = true }

# Speaker ID (always included)
ort = "2.0.0-rc.11"
mel_spec = "0.3"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# VCS
git2 = "0.20"
octocrab = { version = "0.49", optional = true }
gitea-sdk = { version = "0.6", optional = true }

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

# Async / networking
tokio = { version = "1.49", features = ["full"] }

# Crypto
aes-gcm = "0.10"
rand = "0.9"

# Errors
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Dirs
dirs = "6.0"

# HTTP (model downloads)
ureq = "3"

# Unix
libc = "0.2"

[dev-dependencies]
tempfile = "3.26"
tokio-test = "0.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
