[package]
name = "hoover"
version = "0.1.0"
edition = "2024"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
description = "Continuous audio transcription and dictation tool with speaker identification, GPU acceleration, and AI assistant integration"
license = "AGPL-3.0-or-later"
repository = "https://github.com/erikh/hoover"
homepage = "https://github.com/erikh/hoover"
readme = "README.md"
keywords = ["transcription", "dictation", "speech-to-text", "productivity", "audio"]
categories = ["multimedia::audio", "command-line-utilities", "accessibility", "text-processing"]

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda", "ort/cuda", "ort/load-dynamic"]
rocm = ["whisper-rs/hipblas", "ort/rocm", "ort/load-dynamic"]
nogpu = ["ort/download-binaries", "ort/copy-dylibs", "ort/tls-native"]

[[bin]]
name = "hoover"
path = "src/bin/hoover/main.rs"

[dependencies]
# Audio
cpal = "0.17"
hound = "3.5"
rubato = "1.0"
audioadapter-buffers = "2.0"
crossbeam-channel = "0.5"

# STT backends
whisper-rs = "0.15"
vosk = "0.3"
reqwest = { version = "0.13", features = ["json", "multipart"] }

# Speaker ID (always included)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray"] }
mel_spec = "0.3"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# VCS
git2 = "0.20"
octocrab = "0.49"
gitea-sdk = "0.6"

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io"] }
schemars = "1.0"

# Async / networking
tokio = { version = "1.49", features = ["full"] }

# Crypto
aes-gcm = "0.10"
rand = "0.9"

# Errors
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Dirs
dirs = "6.0"

# HTTP (model downloads)
ureq = "3"

# Unix
libc = "0.2"

[dev-dependencies]
tempfile = "3.26"
tokio-test = "0.4"

[package.metadata.deb]
maintainer = "Erik Hollensbe <git@hollensbe.org>"
section = "sound"
priority = "optional"
extended-description = """Hoover is a continuous audio transcription tool that captures microphone \
input, transcribes it using speech-to-text (Whisper, Vosk, or OpenAI), and \
stores timestamped daily markdown logs. Features speaker identification, \
GPU acceleration (CUDA/ROCm), encrypted UDP streaming, and an MCP server \
for AI assistant integration."""
depends = "$auto, alsa-utils"
assets = [
    ["target/release/hoover", "usr/bin/", "755"],
    ["config.example.yaml", "usr/share/doc/hoover/", "644"],
    ["README.md", "usr/share/doc/hoover/", "644"],
    ["LICENSE", "usr/share/doc/hoover/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hoover", dest = "/usr/bin/hoover", mode = "755" },
    { source = "config.example.yaml", dest = "/usr/share/doc/hoover/config.example.yaml", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/hoover/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/hoover/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
alsa-lib = "*"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
